fix correspondent-list overflow

--- a/client/lampenhaus/src/components/CorrespondentList/CorrespondentList.css
+++ b/client/lampenhaus/src/components/CorrespondentList/CorrespondentList.css
@@ -1,3 +1,7 @@
 .count {
     margin-right: 5px;
 }
+
+.correspondent-list-content {
+    overflow-y: scroll;
+};
